--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,27 +4,46 @@
  * work well for content-centric websites.
  */
 
+@import url('https://cdnjs.cloudflare.com/ajax/libs/Iosevka/11.1.1/iosevka/iosevka.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/Iosevka/11.1.1/iosevka-aile/iosevka-aile.min.css');
+
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
+  --ifm-color-primary: #4c0ee2;
+  --ifm-color-primary-dark: #440dcb;
+  --ifm-color-primary-darker: #410cc0;
+  --ifm-color-primary-darkest: #350a9e;
+  --ifm-color-primary-light: #5717f1;
+  --ifm-color-primary-lighter: #5f23f1;
+  --ifm-color-primary-lightest: #7845f3;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-font-family-base: 'Iosevka Aile Web', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --ifm-font-family-monospace: 'Iosevka Web', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+  --ifm-code-font-size: 95%;
+
+  /* Less border radius */
+  --ifm-global-radius: 0.2rem;
+  --ifm-card-border-radius: 0.2rem;
+  --ifm-breadcrumb-border-radius: 0.2rem;
+  --ifm-button-border-radius: 0;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #b780ff;
+  --ifm-color-primary-dark: #ac6dff;
+  --ifm-color-primary-darker: #a15aff;
+  --ifm-color-primary-darkest: #9647ff;
+  --ifm-color-primary-light: #cda6ff;
+  --ifm-color-primary-lighter: #d8b9ff;
+  --ifm-color-primary-lightest: #f8f3ff;
+  --ifm-background-color: #111111;
+  --ifm-navbar-background-color: #111111;
+  --ifm-hero-background-color: #111111;
+  --ifm-footer-background-color: #111111;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+h1, h2, h3, h4, h5, h6, aside, .breadcrumbs, .navbar, .footer, .button {
+  text-transform: uppercase;
 }
