--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -47,3 +47,9 @@
 h1, h2, h3, h4, h5, h6, aside, .breadcrumbs, .navbar, .footer, .button {
   text-transform: uppercase;
 }
+
+.pixelated {
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
+}
