--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -61,9 +61,20 @@ h1, h2, h3, h4, h5, h6, aside, .breadcrumbs, .navbar, .footer, .button {
   height: 548px;
 }
 
+.rivemu-compact-frame {
+  border: 2px solid #131415;
+  overflow: hidden;
+  width: 516px;
+  height: 516px;
+}
+
 @media (max-width: 511px) {
   .rivemu-frame {
     width: 260px;
     height: 288px;
+  }
+  .rivemu-compact-frame {
+    width: 260px;
+    height: 260px;
   }
 }
