--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,6 +8,11 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-image: url('/img/background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 768px;
 }
 
 @media screen and (max-width: 996px) {
@@ -20,4 +25,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.heroSubtitle {
+  color: white;
 }
