--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -83,6 +83,11 @@ h1, h2, h3, h4, h5, h6, aside, .navbar, .button, .footer, .footer__title, .table
   caret-color: transparent;
 }
 
+.rivemu-compact-frame img {
+  width: 100%;
+  height: 100%;
+}
+
 @media (max-width: 607px) {
   .rivemu-frame {
     width: 260px;
